--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </header>
     <section class="hero">
       <div class="hero-container">
-        <div class="hero-content" data-aos="fade-up" data-aos-duration="3000">
+        <div class="hero-content" data-aos="fade-right" data-aos-duration="3000">
           <div class="hero-content-heading">
             <h1>Modern interior</h1>
           </div>
@@ -52,7 +52,7 @@
             <a href="#" class="cta">Read More <i class="fa-solid fa-arrow-right"></i></a>
           </div>
         </div>
-        <div class="hero-img" data-aos="fade-down" data-aos-duration="3000">
+        <div class="hero-img" data-aos="fade-left" data-aos-duration="3000">
           <img src="images/photo1.png" alt="a comfy space">
           <div class="box">
             <div class="author-con">
