--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       </div>
     </section>
     <footer class="footer">
-      <p>created by username - devChallenges.io</p>
+      <p>created by <a href="https://github.com/uniquness1">AYODELE</a> - devChallenges.io</p>
     </footer>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
